; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_pathname.c_pn_alloc_sz.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_pathname.c_pn_alloc_sz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pathname = type { i64, i64, i32, i32 }

@KM_SLEEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pn_alloc_sz(%struct.pathname* %0, i64 %1) #0 {
  %3 = alloca %struct.pathname*, align 8
  %4 = alloca i64, align 8
  store %struct.pathname* %0, %struct.pathname** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i32, i32* @KM_SLEEP, align 4
  %7 = call i32 @kmem_alloc(i64 %5, i32 %6)
  %8 = load %struct.pathname*, %struct.pathname** %3, align 8
  %9 = getelementptr inbounds %struct.pathname, %struct.pathname* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load %struct.pathname*, %struct.pathname** %3, align 8
  %12 = getelementptr inbounds %struct.pathname, %struct.pathname* %11, i32 0, i32 0
  store i64 %10, i64* %12, align 8
  ret void
}

declare dso_local i32 @kmem_alloc(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
